2014-03-04  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: cleaned source code style.

2014-01-20  Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/include/user.class.php,
	mobile/include/system.class.php: fixed SQL injection.
	
	Issue found by Lincoln, a member of Corelan Team
	
	BACKPORT FROM THE TRUNK

2013-12-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed the get events filtered by group.

2013-12-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed the get events when not found the
	agent, before it returned the systems events, now it returns empty
	list.

2013-12-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed the function "returnData" for
	html entities.

2013-12-04  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events_list.php: Fixed agent filter
	when put an agent that not exist. Incident #430

2013-12-03  Sergio Martin <sergio.martin@artica.es>

	* godmode/modules/manage_network_components_form.php: Fixed
	snmp v3 credentials missing in network components editor
	merged from trunk

2013-11-11  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/OpenLayers/OpenLayers.js: Fix layer
	order error that broke the zoom in google maps on GIS for 
	incident #370

2013-11-04  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_edit_modules.php: Added description
	to module massive edition for incident #148.
	Merged from 5.0 (trunk)

2013-11-04  Sergio Martin <sergio.martin@artica.es>

	* include/functions_groups.php: Fixed function that
	returns the user groups in tree way. It was broken
	when the user has acls over a group but not in his
	father. Incident: #342

2013-10-29 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_agents.php: fixed the delete the nodes in the
	networkmap enterprise.

2013-10-28  Vanessa Gil <vanessa.gil@artica.es>

	* include/languages/ar.mo